feat(asgmt_2): finish 2nd part of assignment

--- a/assignments/asgmt_2/cmpe_351_asgmt_2.ipynb
+++ b/assignments/asgmt_2/cmpe_351_asgmt_2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,10 +22,10 @@
     "\n",
     "import pandas as pd\n",
     "import torch\n",
-    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from PIL import Image\n",
     "from sklearn.preprocessing import LabelEncoder\n",
+    "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision.datasets import VisionDataset\n",
     "from torchvision.transforms import transforms"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
     "def trial_layers(train_loader):\n",
     "    \"\"\"Test the shape of the layers for a CNN.\"\"\"\n",
     "    dataiter = iter(train_loader)\n",
-    "    (images) = dataiter.next()\n",
+    "    (images, _) = dataiter.next()\n",
     "\n",
     "    conv1 = nn.Conv2d(3, 6, 5)\n",
     "    pool = nn.MaxPool2d(2, 2)\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
     "        \"\"\"Progresses data across layers.\"\"\"\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = x.flatten(x, 1)  # flatten all dimensions except batch\n",
+    "        x = torch.flatten(x, 1)  # flatten all dimensions except batch\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
     "        return x"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,30 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_23800/2864148193.py:9: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  loss = criterion(outputs, torch.tensor(labels))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 1/2, step 500/1264, loss = 0.804764\n",
-      "epoch 1/2, step 1000/1264, loss = 0.532097\n",
-      "Epoch [1/2], Loss: 0.6679\n",
-      "epoch 2/2, step 500/1264, loss = 0.233595\n",
-      "epoch 2/2, step 1000/1264, loss = 0.965769\n",
-      "Epoch [2/2], Loss: 0.5737\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_model(epoch_count, train_loader, model, criterion, optimizer):\n",
     "    \"\"\"Train a DL model.\"\"\"\n",
@@ -349,15 +328,12 @@
     "                    f\" step {i+1}/{n_total_steps}, loss = {loss.item():4f}\"\n",
     "                )\n",
     "\n",
-    "        print(f\"Epoch [{epoch + 1}/{epoch_count}], Loss: {loss.item():.4f}\")\n",
-    "\n",
-    "\n",
-    "train_model(EPOCH_COUNT, train_loader, model, criterion, optimizer)"
+    "        print(f\"Epoch [{epoch + 1}/{epoch_count}], Loss: {loss.item():.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "41d23ed8",
    "metadata": {},
    "outputs": [],
@@ -387,9 +363,46 @@
     "        print(\n",
     "            f\"Accuracy of the network on the {len(train_loader)} train images:\"\n",
     "            f\" {100 * correct / total} %\"\n",
-    "        )\n",
-    "\n",
-    "\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1/2, step 500/1264, loss = 1.635015\n",
+      "epoch 1/2, step 1000/1264, loss = 1.256636\n",
+      "Epoch [1/2], Loss: 1.1399\n",
+      "epoch 2/2, step 500/1264, loss = 1.120829\n",
+      "epoch 2/2, step 1000/1264, loss = 0.935181\n",
+      "Epoch [2/2], Loss: 1.1313\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_model(EPOCH_COUNT, train_loader, model, criterion, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 125 test images: 75.1 %\n",
+      "Accuracy of the network on the 1264 train images: 74.9668099277694 %\n"
+     ]
+    }
+   ],
+   "source": [
     "evaluate_model(train_loader, test_loader, model)"
    ]
   },
@@ -402,12 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyper parameters\n",
-    "EPOCH_COUNT = 2\n",
+    "EPOCH_COUNT = 4\n",
     "CLASSES_COUNT = 13\n",
     "BATCH_SIZE = 32\n",
     "LEARNING_RATE = 0.001"
@@ -415,18 +428,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 3, 32, 32])\n",
+      "torch.Size([32, 6, 28, 28])\n",
+      "torch.Size([32, 6, 15, 15])\n",
+      "torch.Size([32, 16, 11, 11])\n",
+      "torch.Size([32, 16, 6, 6])\n",
+      "torch.Size([32, 32, 2, 2])\n",
+      "torch.Size([32, 32, 2, 2])\n"
+     ]
+    }
+   ],
    "source": [
     "def trial_layers_v2(train_loader):\n",
     "    \"\"\"Test the shape of the layers for a CNN.\"\"\"\n",
     "    dataiter = iter(train_loader)\n",
-    "    (images) = dataiter.next()\n",
+    "    (images, _) = dataiter.next()\n",
     "\n",
     "    conv1 = nn.Conv2d(3, 6, 5)\n",
-    "    pool = nn.MaxPool2d(2, 2)\n",
+    "    pool = nn.MaxPool2d(2, 2, 1)\n",
     "    conv2 = nn.Conv2d(6, 16, 5)\n",
+    "    conv3 = nn.Conv2d(16, 32, 5)\n",
     "    print(images.shape)\n",
     "    trials = conv1(images)\n",
     "    print(trials.shape)\n",
@@ -435,12 +463,19 @@
     "    trials = conv2(trials)\n",
     "    print(trials.shape)\n",
     "    trials = pool(trials)\n",
-    "    print(trials.shape)"
+    "    print(trials.shape)\n",
+    "    trials = conv3(trials)\n",
+    "    print(trials.shape)\n",
+    "    trials = pool(trials)\n",
+    "    print(trials.shape)\n",
+    "\n",
+    "\n",
+    "trial_layers_v2(train_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "208bddd0",
    "metadata": {},
    "outputs": [],
@@ -452,16 +487,18 @@
     "        \"\"\"Determine what layers and their order in CNN object.\"\"\"\n",
     "        super().__init__()\n",
     "        self.conv1 = nn.Conv2d(3, 6, 5)\n",
-    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.pool = nn.MaxPool2d(2, 2, 1)\n",
     "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
-    "        self.fc1 = nn.Linear(16 * 5 * 5, 128)\n",
-    "        self.fc2 = nn.Linear(128, num_classes)\n",
+    "        self.conv3 = nn.Conv2d(16, 32, 5)\n",
+    "        self.fc1 = nn.Linear(32 * 2 * 2, 32)\n",
+    "        self.fc2 = nn.Linear(32, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
     "        \"\"\"Progresses data across layers.\"\"\"\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = x.flatten(x, 1)  # flatten all dimensions except batch\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = torch.flatten(x, 1)  # flatten all dimensions except batch\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
     "        return x"
@@ -469,39 +506,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "996f8674",
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1/4, step 500/1264, loss = 1.240248\n",
+      "epoch 1/4, step 1000/1264, loss = 0.999678\n",
+      "Epoch [1/4], Loss: 1.1389\n",
+      "epoch 2/4, step 500/1264, loss = 1.119123\n",
+      "epoch 2/4, step 1000/1264, loss = 0.818494\n",
+      "Epoch [2/4], Loss: 0.3830\n",
+      "epoch 3/4, step 500/1264, loss = 0.848047\n",
+      "epoch 3/4, step 1000/1264, loss = 0.339255\n",
+      "Epoch [3/4], Loss: 0.5753\n",
+      "epoch 4/4, step 500/1264, loss = 0.762600\n",
+      "epoch 4/4, step 1000/1264, loss = 0.474538\n",
+      "Epoch [4/4], Loss: 0.7833\n"
+     ]
+    }
+   ],
    "source": [
-    "model = ConvolutionalNeuralNetwork(CLASSES_COUNT)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "model_v2 = ConvolutionalNeuralNetworkV2(CLASSES_COUNT)\n",
     "optimizer = torch.optim.SGD(\n",
-    "    model.parameters(), lr=LEARNING_RATE, weight_decay=0.005, momentum=0.9\n",
+    "    model_v2.parameters(), lr=LEARNING_RATE, weight_decay=0.005, momentum=0.9\n",
     ")\n",
     "\n",
-    "train_model(EPOCH_COUNT, train_loader, model, criterion, optimizer)"
+    "train_model(EPOCH_COUNT, train_loader, model_v2, criterion, optimizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 125 test images: 81.6 %\n",
-      "Accuracy of the network on the 1264 train images: 81.59807385072344 %\n"
+      "Accuracy of the network on the 125 test images: 81.625 %\n",
+      "Accuracy of the network on the 1264 train images: 81.6543282104363 %\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "evaluate_model(train_loader, test_loader, model)"
+    "evaluate_model(train_loader, test_loader, model_v2)"
    ]
   }
  ],
