--- a/assignments/asgmt_2/cmpe_351_asgmt_2.ipynb
+++ b/assignments/asgmt_2/cmpe_351_asgmt_2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,14 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
+    "from torchinfo import summary\n",
     "from torchvision.datasets import VisionDataset\n",
     "from torchvision.transforms import transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,15 +291,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "ConvolutionalNeuralNetwork               --                        --\n",
+       "├─Conv2d: 1-1                            [32, 6, 28, 28]           456\n",
+       "├─MaxPool2d: 1-2                         [32, 6, 14, 14]           --\n",
+       "├─Conv2d: 1-3                            [32, 16, 10, 10]          2,416\n",
+       "├─MaxPool2d: 1-4                         [32, 16, 5, 5]            --\n",
+       "├─Linear: 1-5                            [32, 128]                 51,328\n",
+       "├─Linear: 1-6                            [32, 13]                  1,677\n",
+       "==========================================================================================\n",
+       "Total params: 55,877\n",
+       "Trainable params: 55,877\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 20.87\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.39\n",
+       "Forward/backward pass size (MB): 1.65\n",
+       "Params size (MB): 0.22\n",
+       "Estimated Total Size (MB): 2.27\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = ConvolutionalNeuralNetwork(CLASSES_COUNT)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.SGD(\n",
     "    model.parameters(), lr=LEARNING_RATE, weight_decay=0.005, momentum=0.9\n",
-    ")"
+    ")\n",
+    "\n",
+    "summary(model, input_size=(BATCH_SIZE, 3, 32, 32))"
    ]
   },
   {
@@ -415,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 150,
    "id": "208bddd0",
    "metadata": {},
    "outputs": [],
@@ -506,6 +540,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "ConvolutionalNeuralNetworkV2             --                        --\n",
+       "├─Conv2d: 1-1                            [32, 6, 28, 28]           456\n",
+       "├─MaxPool2d: 1-2                         [32, 6, 15, 15]           --\n",
+       "├─Conv2d: 1-3                            [32, 16, 11, 11]          2,416\n",
+       "├─MaxPool2d: 1-4                         [32, 16, 6, 6]            --\n",
+       "├─Conv2d: 1-5                            [32, 32, 2, 2]            12,832\n",
+       "├─MaxPool2d: 1-6                         [32, 32, 2, 2]            --\n",
+       "├─Linear: 1-7                            [32, 32]                  4,128\n",
+       "├─Linear: 1-8                            [32, 13]                  429\n",
+       "==========================================================================================\n",
+       "Total params: 20,261\n",
+       "Trainable params: 20,261\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 22.58\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.39\n",
+       "Forward/backward pass size (MB): 1.74\n",
+       "Params size (MB): 0.08\n",
+       "Estimated Total Size (MB): 2.22\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_v2 = ConvolutionalNeuralNetworkV2(CLASSES_COUNT)\n",
+    "optimizer = torch.optim.SGD(\n",
+    "    model_v2.parameters(), lr=LEARNING_RATE, weight_decay=0.005, momentum=0.9\n",
+    ")\n",
+    "\n",
+    "summary(model_v2, input_size=(BATCH_SIZE, 3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 125,
    "id": "996f8674",
    "metadata": {
@@ -532,11 +613,6 @@
     }
    ],
    "source": [
-    "model_v2 = ConvolutionalNeuralNetworkV2(CLASSES_COUNT)\n",
-    "optimizer = torch.optim.SGD(\n",
-    "    model_v2.parameters(), lr=LEARNING_RATE, weight_decay=0.005, momentum=0.9\n",
-    ")\n",
-    "\n",
     "train_model(EPOCH_COUNT, train_loader, model_v2, criterion, optimizer)"
    ]
   },
